fixed navbar sizing on mobile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -269,6 +269,20 @@ input[type="number"]::-webkit-outer-spin-button {
 /* media query for mobile */
 
 @media screen and (max-width: 600px) {
+  .icon {
+    height: 25px;
+    width: 25px;
+    display: inline-block;
+  }
+  
+  .icon:hover {
+    color: #c1dedf;
+  }
+
+  .user-wallet {
+    font-size: 14px;
+  }
+
   .main {
     display: flex;
     flex-direction: column;
@@ -300,12 +314,6 @@ input[type="number"]::-webkit-outer-spin-button {
     gap: 2px;
     align-items: center;
     align-content: center;
-  }
-
-  .user-wallet {
-    font-size: 16px;
-    /* margin-bottom: 0;
-    margin-top: 1%; */
   }
 
   .topnav {
